Main wrap Added main wrap component, added favicon. resolves #7

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,7 @@
 
 body {
     font-family: $normalFontFamily;
+    margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
